...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_title"
        style="@style/NoteCreation.Title"
        android:hint="@string/title_hint"
        android:saveEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/add_divider"
        style="@style/NoteCreation.Divider"
        android:saveEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <EditText
        android:id="@+id/text_description"
...
        android:hint="@string/enter_note_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <com.google.android.material.chip.Chip
        android:id="@+id/date_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="cp, 10 окт. 2018"
        app:chipCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="@id/text_description"
        app:layout_constraintTop_toBottomOf="@id/text_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_drop_down_24"
...
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_chip" />

    <ImageButton
        android:id="@+id/delete_button"
        style="@style/NoteCreation.DeleteButton"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@id/fab_more"
        app:layout_constraintEnd_toStartOf="@id/full_screen_button"
        app:layout_constraintStart_toEndOf="@id/calendar_button"
        app:layout_constraintTop_toTopOf="@id/fab_more" />

    <ImageButton
        android:id="@+id/calendar_button"
        style="@style/NoteCreation.CalendarButton"
        android:layout_marginStart="12dp"
...
        android:background="?selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@id/fab_more"
        app:layout_constraintStart_toEndOf="@id/delete_button"
        app:layout_constraintTop_toTopOf="@id/fab_more" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/NoteCreation.SaveButton"
        android:text="@string/save_button_text"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_chip" />
...
